# libusb

./: meson.build  meson.options
examples/: meson.build
libusb/: core.c  libusb.h
libusb/os/: linux_usbfs.c  linux_usbfs.h  threads_posix.c  windows_hotplug.c  windows_usbdk.c  windows_winusb.c
tests/: meson.build
